@@ -1,3 +1,11 @@
+Fri Mar 25 07:10:35 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* ace/config-unixware-7.1.0.h:
+	* ace/config-unixware-7.1.0.udk.h:
+
+	  Removed ACE_UINT64_TYPEDEF definition.  Let Basic_Types.h
+	  do its thing.
+
 Fri Mar 25 07:02:59 2005  J.T. Conklin  <jtc@acorntoolworks.com>
 
 	* ace/config-win32-common.h:
